--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -22,7 +22,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
-    <bool name="config_unplugTurnsOnScreen">false</bool>
+    <bool name="config_unplugTurnsOnScreen">true</bool>
 
     <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be
          autodetected from the Configuration. -->
@@ -174,6 +174,12 @@
     <!-- Wifi driver supports batched scan -->
     <bool translatable="false" name="config_wifi_batched_scan_supported">true</bool>
 
+    <!-- Wifi driver supports Automatic channel selection (ACS) for softap -->
+    <bool translatable="false" name="config_wifi_softap_acs_supported">true</bool>
+
+    <!-- Wifi driver supports IEEE80211AC for softap -->
+    <bool translatable="false" name="config_wifi_softap_ieee80211ac_supported">true</bool>
+
     <!-- Configure wifi tcp buffersizes in the form:
          rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max -->
     <string name="config_wifi_tcp_buffers" translatable="false">524288,1048576,5505024,262144,524288,5505024</string>
@@ -260,6 +266,11 @@
          provisioning, availability etc -->
     <bool name="config_carrier_volte_available">true</bool>
 
+    <!-- Flag specifying whether VT should be available for carrier: independent of
+         carrier provisioning. If false: hard disabled. If true: then depends on carrier
+         provisioning, availability etc -->
+    <bool name="config_carrier_vt_available">true</bool>
+
     <!-- Flag specifying whether VT is available on device -->
      <bool name="config_device_vt_available">true</bool>
 
@@ -288,6 +299,16 @@
     <!-- Is the device capable of hot swapping an ICC Card -->
     <bool name="config_hotswapCapable">true</bool>
 
+    <!--Thresholds for LTE dbm in status bar-->
+    <integer-array translatable="false" name="config_lteDbmThresholds">
+        <item>-140</item>    <!-- SIGNAL_STRENGTH_NONE_OR_UNKNOWN -->
+        <item>-140</item>    <!-- SIGNAL_STRENGTH_POOR -->
+        <item>-125</item>    <!-- SIGNAL_STRENGTH_MODERATE -->
+        <item>-112</item>    <!-- SIGNAL_STRENGTH_GOOD -->
+        <item>-102</item>    <!-- SIGNAL_STRENGTH_GREAT -->
+        <item>-44</item>
+    </integer-array>
+
     <!-- Number of physical SIM slots on the device. This includes both eSIM and pSIM slots, and
          is not necessarily the same as the number of phones/logical modems supported by the device.
          For example, a multi-sim device can have 2 phones/logical modems, but 3 physical slots,
@@ -299,8 +320,19 @@
          rotations as the default behavior. -->
     <bool name="config_allowAllRotations">true</bool>
 
+    <!-- Whether device ignores the RSSNR signal implementation -->
+    <bool name="config_ignoreRssnrSignalLevel">true</bool>
+
     <!-- Flag indicating if the speed up audio on mt call code should be executed -->
     <bool name="config_speed_up_audio_on_mt_calls">true</bool>
+
+    <!-- Override the default detection behavior for the framework method
+         android.view.ViewConfiguration#hasPermanentMenuKey().
+         Valid settings are:
+         0 - No change. Use the default autodetection behavior.
+         1 - The device DOES have a permanent menu key; ignore autodetection.
+         2 - The device DOES NOT have a permanent menu key; ignore autodetection. -->
+    <integer name="config_overrideHasPermanentMenuKey">2</integer>
 
     <!-- Whether the Unprocessed audio source supports the required frequency range and level -->
     <bool name="config_supportAudioSourceUnprocessed">false</bool>
@@ -1024,7 +1056,7 @@
     <bool name="config_dual_LTE_capability">true</bool>
 
     <!-- Integer indicating wpa_supplicant scan interval in milliseconds -->
-    <integer translatable="false" name="config_wifi_supplicant_scan_interval">25000</integer>
+    <integer translatable="false" name="config_wifi_supplicant_scan_interval">30000</integer>
 
     <!-- Vibration -->
     <integer-array name="config_longPressVibePattern">
@@ -1045,13 +1077,10 @@
     <bool name="config_show_vendor_mismatch_message">false</bool>
 
     <!-- Whether device has a physical display cutout -->
-    <bool name="config_physicalDisplayCutout">true</bool>
+    <bool name="config_physicalDisplayCutout">false</bool>
 
     <!-- Whether device has oled display -->
     <bool name="config_hasOledDisplay">true</bool>
-
-    <!-- Whether to show battery percentage inside icon -->
-    <bool name="config_battery_percentage_show_inside_icon">true</bool>
 
     <!-- Default list of files pinned by the Pinner Service -->
     <string-array name="config_defaultPinnerServiceFiles">
@@ -1076,15 +1105,7 @@
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
     <item name="config_screenAspectRatio" format="float" type="dimen">2.1</item>
 
-    <!-- Whether auto face unlock is enabled by default -->
-    <bool name="config_autoFaceUnlockEnabledByDefault">true</bool>
-
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">M -62,0 L -62,79 L 62,79 L 62,0 Z</string>
-
-    <!-- Whether the display cutout region of the main built-in display should be forced to
-         black in software (to avoid aliasing or emulate a cutout that is not physically existent).
-        -->
-     <bool name="config_fillMainBuiltInDisplayCutout">false</bool>
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">M-86.9975334,10.7082389 C-74.1335099,23.7038575 -64.104552,36.2300641 -56.9106598,48.2868587 C-45.0899716,68.1052477 -23.8069241,81 0.002904346,81 C23.8127328,81 45.0899716,68.1052477 56.9164685,48.2868587 C64.1090408,36.2290779 74.1379482,23.7022572 87.0031906,10.7063968 L87,0 L-87,0 L-86.9975334,10.7082389 Z</string>
 
     <!-- Whether the device has fingeprint sensor or not -->
     <bool name="config_hasFingerprintSensor">true</bool>
@@ -1100,14 +1121,9 @@
     </integer-array>
 
     <bool name="config_setColorTransformAccelerated">true</bool>
-    <bool name="config_enableAutoPowerModes">true</bool>
 
-    <!-- Whether the device supports Smart Pixels -->
-    <bool name="config_supportSmartPixels">true</bool>
+    <bool name="config_enableAutoPowerModes">true</bool>
 
     <!-- Show a custom view for FOD -->
     <bool name="config_needCustomFODView">true</bool>
-
-    <string  translatable="false" name="config_wifi_framework_sap_2G_channel_list">1,6,11</string>
-
 </resources>
