--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -27,6 +27,8 @@
         <value>6</value>
         <value>2</value>
     </array>
+    <item name="cpu.cluster_power.cluster0">1.30</item>
+    <item name="cpu.cluster_power.cluster1">5.29</item>
     <array name="cpu.core_speeds.cluster0">
         <value>300000</value>
         <value>576000</value>
@@ -81,22 +83,55 @@
         <value>270.98</value>
         <value>299.82</value>
     </array>
-    <item name="cpu.idle">9.72</item>
+    <item name="cpu.idle">6.44</item>
     <item name="cpu.suspend">6.44</item>
+    <item name="cpu.active">21.89</item>
     <array name="memory.bandwidths">
         <value>22.7</value>
     </array>
-    <item name="battery.capacity">3070</item>
-    <item name="wifi.controller.idle">0</item>
-    <item name="wifi.controller.rx">0</item>
-    <item name="wifi.controller.tx">0</item>
-    <array name="wifi.controller.tx_levels" />
-    <item name="wifi.controller.voltage">0</item>
-    <array name="wifi.batchedscan">
-        <value>.0002</value>
-        <value>.002</value>
-        <value>.02</value>
-        <value>.2</value>
-        <value>2</value>
+    <item name="ambient.on">24</item>
+
+    <!-- Additional power used when screen is turned on at minimum brightness -->
+    <item name="screen.on">80</item>
+    <!-- Additional power used when screen is at maximum brightness, compared to
+         screen at minimum brightness -->
+    <item name="screen.full">320</item>
+
+    <!-- Average power used by the camera flash module when on -->
+    <item name="camera.flashlight">242.85</item>
+    <!-- Average power use by the camera subsystem for a typical camera
+         application. Intended as a rough estimate for an application running a
+         preview and capturing approximately 10 full-resolution pictures per
+         minute. -->
+    <item name="camera.avg">329.5</item>
+
+    <!-- Additional power used when video is playing -->
+    <item name="video">25</item>
+    <!-- Additional power used when audio is playing -->
+    <item name="audio">75</item>
+
+    <!-- Cellular modem related values.-->
+    <item name="modem.controller.sleep">0</item>
+    <item name="modem.controller.idle">105</item>
+    <item name="modem.controller.rx">110</item>
+    <array name="modem.controller.tx"> <!-- Strength 0 to 4 -->
+      <value>1</value>
+      <value>5</value>
+      <value>26</value>
+      <value>100</value>
+      <value>249</value>
     </array>
+    <item name="modem.controller.voltage">3700</item>
+
+    <!-- GPS related values.-->
+    <array name="gps.signalqualitybased"> <!-- Strength 0 to 1 -->
+      <value>33</value>
+      <value>7</value>
+    </array>
+    <item name="gps.voltage">3700</item>
+    <item name="battery.capacity">3070</item>
+    <item name="wifi.controller.idle">1</item>
+    <item name="wifi.controller.rx">125</item>
+    <item name="wifi.controller.tx">350</item>
+    <item name="wifi.controller.voltage">3700</item>
 </device>
