--- a/overlay-lineage/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-lineage/frameworks/base/core/res/res/values/config.xml
@@ -18,6 +18,6 @@
 -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Whether to show a custom view for FOD -->
-    <bool name="config_needCustomFODView">true</bool>
+    <!-- Default state for LiveDisplay -->
+    <bool name="config_liveDisplayAvailable">true</bool>
 </resources>
