--- a/configpanel/res/xml/flicker_free_settings.xml
+++ b/configpanel/res/xml/flicker_free_settings.xml
@@ -28,7 +28,8 @@
           android:summary="@string/flicker_free_toggle_bri_summary"
           android:min="@integer/flicker_free_bri_min"
           android:defaultValue="@integer/flicker_free_bri_default"
-          android:max="@integer/flicker_free_bri_max" />
+          android:max="@integer/flicker_free_bri_max" 
+          android:dependency="flicker_free" />
 
      <SeekBarPreference
           android:key="flicker_free_exp"
@@ -37,6 +38,7 @@
           android:summary="@string/flicker_free_toggle_exp_summary"
           android:min="@integer/flicker_free_exp_min"
           android:defaultValue="@integer/flicker_free_exp_default"
-          android:max="@integer/flicker_free_exp_max" />     
+          android:max="@integer/flicker_free_exp_max" 
+          android:dependency="flicker_free" />     
 
 </PreferenceScreen>
