--- a/overlay-lineage/lineage-sdk/packages/LineageSettingsProvider/res/values/defaults.xml
+++ b/overlay-lineage/lineage-sdk/packages/LineageSettingsProvider/res/values/defaults.xml
@@ -24,4 +24,7 @@
 
     <!-- Disable bluetooth by default -->
     <bool name="def_bluetooth_on">false</bool>
+
+    <!-- Default for LineageSettings.Secure.STATS_COLLECTION -->
+    <bool name="def_stats_collection">true</bool>
 </resources>
