--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1180,7 +1180,15 @@
     </string-array>
 
     <!-- Should we filter any display modes which are unampped? -->
-    <bool name="config_filterDisplayModes">true</bool><!-- Boolean indicating whether single radio chain scan results are to be used for network selection -->	
+    <bool name="config_filterDisplayModes">true</bool>
 
+    <!-- Boolean indicating whether single radio chain scan results are to be used for network selection -->	
     <bool translatable="false" name="config_wifi_framework_use_single_radio_chain_scan_results_network_selection">true</bool>    
+
+    <!-- List supported color modes. -->
+    <integer-array name="config_availableColorModes">
+        <item>0</item> <!-- COLOR_MODE_NATURAL -->
+        <item>1</item> <!-- COLOR_MODE_BOOSTED -->
+        <item>3</item> <!-- COLOR_MODE_AUTOMATIC -->
+    </integer-array>
 </resources>
