--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -35,4 +35,6 @@
     <bool name="config_show_mobile_plan">true</bool>
 
     <string name="bliss_maintainer">pengus77</string>
+
+    <string name="config_customDozePackage">com.custom.ambient.display/com.custom.ambient.display.DozeSettings</string>
 </resources>
