--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -19,12 +19,12 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- the padding on the start of the statusbar -->
-    <dimen name="status_bar_padding_start">16dp</dimen>
+    <!--dimen name="status_bar_padding_start">16dp</dimen-->
 
     <!-- the padding on the end of the statusbar -->
-    <dimen name="status_bar_padding_end">16dp</dimen>
+    <!--dimen name="status_bar_padding_end">16dp</dimen-->
 
     <dimen name="display_cutout_touchable_region_size">12dp</dimen>
 
-    <dimen name="system_icons_keyguard_padding_end">12dp</dimen>
+    <dimen name="system_icons_keyguard_padding_end">8dp</dimen>
 </resources>
