--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1154,4 +1154,6 @@
     <string-array name="config_biometric_sensors" translatable="false" >
         <item>0:2:15</item>  <!-- ID0:Fingerprint:Strong -->
     </string-array>
+
+    <bool name="config_cleanupUnusedFingerprints">false</bool>
 </resources>
