--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -379,8 +379,8 @@
          that can be set by the user. -->
     <integer name="config_screenBrightnessDim">10</integer>
     <integer name="config_screenBrightnessDark">1</integer>
-    <integer name="config_screenBrightnessDoze">1</integer>
-    <bool name="config_allowAutoBrightnessWhileDozing">false</bool>
+    <integer name="config_screenBrightnessDoze">20</integer>
+    <bool name="config_allowAutoBrightnessWhileDozing">true</bool>
 
     <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
 
