statusbar: set a 120 seconds shift interval for burn-in protection

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -22,6 +22,7 @@
 <resources>
     <!-- Enabke Burn in protection -->
     <bool name="config_statusBarBurnInProtection">true</bool>
+    <integer name="config_shift_interval">120</integer>
 
     <!-- Doze: check proximity sensor before pulsing? -->
     <bool name="doze_proximity_check_before_pulse">false</bool>
